# dogdex

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-06-13-151429_create_dogs/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: add.html  index.html  index.html.bak  layout.html  view.html
