[package]
name = "dogdex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.7.0"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "5", features = ["dir_source"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
dotenvy = "0.15"
dotenv = "0.15.0"
awmp = "0.8.1"

